// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Newsletter de-DE 1`] = `
<section
  className="newsletter-container"
>
  <div
    className="newsletter"
    id="newsletter-form-container"
  >
    <form
      className="newsletter-form nodisable"
      name="newsletter-form"
      onSubmit={[Function]}
    >
      <section
        className="newsletter-head"
      >
        <h2
          className="newsletter-teaser"
        >
          Learn the best of web development
        </h2>
        <p
          className="newsletter-description"
        >
          Get the latest and greatest from MDN delivered straight to your inbox.
        </p>
        <p
          aria-hidden={false}
          className="newsletter-lang"
        >
          The newsletter is offered in English only at the moment.
        </p>
      </section>
      <fieldset
        className="newsletter-fields"
      >
        <input
          name="fmt"
          type="hidden"
          value="H"
        />
        <input
          name="newsletters"
          type="hidden"
          value="app-dev"
        />
        <div
          className="form-group newsletter-group-email"
        >
          <label
            className="form-label offscreen"
            htmlFor="newsletter-email-input"
          >
            E-mail
          </label>
          <input
            className="form-input newsletter-input-email"
            id="newsletter-email-input"
            name="email"
            onFocus={[Function]}
            placeholder="you@example.com"
            required={true}
            type="email"
          />
        </div>
        <div
          aria-hidden={true}
          className="hidden"
          id="newsletter-privacy"
        >
          <input
            id="newsletter-privacy-input"
            name="privacy"
            required={true}
            type="checkbox"
          />
          <label
            htmlFor="newsletter-privacy-input"
          >
            I’m okay with Mozilla handling my info as explained in this 
            <a
              href="https://www.mozilla.org/privacy/"
            >
              Privacy Policy
            </a>
            .
          </label>
        </div>
        <div
          className="newsletter-group-submit"
        >
          <button
            className="button neutral newsletter-submit"
            id="newsletter-submit"
            type="submit"
          >
            Sign up now
          </button>
        </div>
      </fieldset>
    </form>
    <button
      aria-controls="newsletter-form-container"
      className="only-icon newsletter-hide"
      onClick={[Function]}
      type="button"
    >
      <span>
        Hide Newsletter Sign-up
      </span>
      <svg mock />
    </button>
  </div>
</section>
`;

exports[`Newsletter en-US 1`] = `
<section
  className="newsletter-container"
>
  <div
    className="newsletter"
    id="newsletter-form-container"
  >
    <form
      className="newsletter-form nodisable"
      name="newsletter-form"
      onSubmit={[Function]}
    >
      <section
        className="newsletter-head"
      >
        <h2
          className="newsletter-teaser"
        >
          Learn the best of web development
        </h2>
        <p
          className="newsletter-description"
        >
          Get the latest and greatest from MDN delivered straight to your inbox.
        </p>
        <p
          aria-hidden={true}
          className="hidden"
        >
          The newsletter is offered in English only at the moment.
        </p>
      </section>
      <fieldset
        className="newsletter-fields"
      >
        <input
          name="fmt"
          type="hidden"
          value="H"
        />
        <input
          name="newsletters"
          type="hidden"
          value="app-dev"
        />
        <div
          className="form-group newsletter-group-email"
        >
          <label
            className="form-label offscreen"
            htmlFor="newsletter-email-input"
          >
            E-mail
          </label>
          <input
            className="form-input newsletter-input-email"
            id="newsletter-email-input"
            name="email"
            onFocus={[Function]}
            placeholder="you@example.com"
            required={true}
            type="email"
          />
        </div>
        <div
          aria-hidden={true}
          className="hidden"
          id="newsletter-privacy"
        >
          <input
            id="newsletter-privacy-input"
            name="privacy"
            required={true}
            type="checkbox"
          />
          <label
            htmlFor="newsletter-privacy-input"
          >
            I’m okay with Mozilla handling my info as explained in this 
            <a
              href="https://www.mozilla.org/privacy/"
            >
              Privacy Policy
            </a>
            .
          </label>
        </div>
        <div
          className="newsletter-group-submit"
        >
          <button
            className="button neutral newsletter-submit"
            id="newsletter-submit"
            type="submit"
          >
            Sign up now
          </button>
        </div>
      </fieldset>
    </form>
    <button
      aria-controls="newsletter-form-container"
      className="only-icon newsletter-hide"
      onClick={[Function]}
      type="button"
    >
      <span>
        Hide Newsletter Sign-up
      </span>
      <svg mock />
    </button>
  </div>
</section>
`;
